<resources>
    <string name="app_name">学习喵</string>

    <string name="course_name">可汗学院公开课</string>
    <string name="corse_teacher">集数:</string>
    <string name="corse_language">学校:</string>
    <string name="corse_whenlong">时长:</string>
    <string name="corse_type">类型:</string>
    <string name="corse_play">播放:</string>
    <string name="corse_score">评分:</string>
    <string name="corse_source">来源:</string>
    <string name="corse_play_btn">播放</string>
    <string name="corse_play_collection">收藏</string>
    <string name="corse_play_briefintroduction">简介: </string>
    <string name="drama_list">剧集列表</string>
    <string name="corse_con_btn">收藏</string>
    <string name="video_error">视频加载失败</string>
    <string name="source">来源:网易</string>
    <string name="title">标题标题标题标题标题标题标题标题标题标题</string>

    <string name="login">登陆</string>
    <string name="all_setting">全部设置</string>
    <string name="loading">正在加载</string>
    <string name="thumb_list">专栏列表</string>
    <string name="buy">购买</string>
    <string name="buy_yet">已购买</string>
    <string name="play">播放</string>
    <string name="collect">关注</string>
    <string name="free">免费</string>
    <string name="charge">收费</string>
    <string name="regdate">注册日期</string>
    <string name="play_history">播放记录</string>
    <string name="subject_collection">专题收藏</string>
    <string name="no_collection">您还没有关注专题，快去收藏喜欢的专题吧！</string>
    <string name="no_history">您还没有播放记录，快去播放喜欢的内容吧！</string>
    <string name="cosume_records">消费记录</string>
    <string name="qrcode_scan">微信扫一扫</string>
    <string name="subscribe">订阅成为%s专栏会员</string>
    <string name="feed_back">问题反馈</string>
    <string name="contact_us">联系我们</string>
    <string name="submit_by_scan">微信扫一扫提交</string>>
    <string name="video_selections">选集</string>>
    <string name="retry">重试</string>

    <!--Vitamio-->
    <string name="vitamio_library_app_name">VitamioLibrary</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="permission_group_tools_label">Vitamio tools</string>
    <string name="permission_group_tools_description">Access Vitamio package and resources.</string>
    <string name="permission_receive_messages_label">Receive Vitamio messages</string>
    <string name="permission_receive_messages_description">Receive all broadcasts from Vitamio service.</string>
    <string name="permission_write_providers_label">Write Vitamio providers</string>
    <string name="permission_write_providers_description">Delete, update or create new items in Vitamio providers.
    </string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
        this device.
    </string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>



    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- 键盘自定义按键，这只是DEMO，你可以自定义自己的 -->
    <string name="keycode_space">62</string> <!-- 空格 -->
    <string name="keycode_center">66</string> <!-- 回车 -->
    <string name="keycode_back">4</string> <!-- 返回 -->
    <string name="keycode_left">21</string> <!-- 左边 -->
    <string name="keycode_right">22</string> <!-- 右边 -->
    <string name="keycode_del">67</string> <!-- 删除 -->

    <!-- viewpager 标题栏字体-->
    <string name="fzlt_zhun_hei">FZLTZHUNHEI_GBK.ttf</string>
    <string name="fzlt_cu_hei">FZLTHC_GBK.ttf</string>

    <string name="nav_tab_normal_ttf">@string/fzlt_zhun_hei</string>
    <string name="nav_tab_focus_ttf">@string/fzlt_cu_hei</string>
</resources>
