<?xml version="1.0" encoding="utf-8"?>
<!-- animationType 默认无动画 此处设为平移
	 durationTranslate 平移用时 默为7ms
	 boarderInt 选中框边缘宽度-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    >

    <RelativeLayout
        android:id="@+id/course_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/largeImg"
                android:layout_width="260dp"
                android:layout_height="200dp"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:background="@mipmap/nopic"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/course_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_name"
                    android:textColor="@color/color_gray"
                    android:textSize="23sp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:id="@+id/playCount"
                    android:text="@string/corse_teacher"
                    android:textColor="@color/color_gray_text"
                    android:textSize="@dimen/text_couse_size"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/corse_whenlong"
                    android:textColor="@color/color_gray_text"
                    android:textSize="@dimen/text_couse_size"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"></TextView>

                <TextView
                    android:id="@+id/Hits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/corse_play"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/color_gray_text"
                    android:textSize="@dimen/text_couse_size"></TextView>

                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/corse_type"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/color_gray_text"
                    android:textSize="@dimen/text_couse_size"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/corse_score"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/color_gray_text"
                    android:textSize="@dimen/text_couse_size"
                    android:visibility="gone"></TextView>

                <TextView
                    android:id="@+id/source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/corse_source"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/color_gray_text"
                    android:textSize="@dimen/text_couse_size"></TextView>

                <TextView
                    android:id="@+id/school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/corse_language"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/color_gray_text"
                    android:textSize="@dimen/text_couse_size"
                    ></TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/course_contorl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nav"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/play"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:text="@string/corse_play_btn"
                android:textColor="@drawable/course_btn_play_color"
                android:textSize="15sp"
                android:background="@drawable/course_btn_play_bg"/>

            <Button
                android:id="@+id/collection"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:textSize="15sp"
                android:textColor="@drawable/course_btn_play_color"
                android:text="@string/corse_con_btn"
                android:background="@drawable/course_btn_play_bg"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_contorl"
            android:layout_marginTop="15dp"
            android:lines="3"
            android:text="@string/corse_play_briefintroduction"
            android:textColor="@color/color_gray_text"
            android:textSize="@dimen/text_couse_size"
            android:lineSpacingExtra="2dp"
            android:id="@+id/briefintroduction"
            >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drama_list"
            android:textSize="20sp"
            android:layout_below="@+id/briefintroduction"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_gray"
            android:id="@+id/drama"
            >
        </TextView>

        <GridView
            android:id="@+id/course_gridview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/drama"
            android:layout_marginTop="15dp"
            android:numColumns="11"
            android:listSelector="#00000000"
            android:verticalSpacing="5dp"
            >
        </GridView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        >
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
     <TextView
         android:id="@+id/netWork"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0K/s"
         android:textColor="@color/color_gray_text"
         android:textSize="20sp"
         android:layout_marginTop="10dp"
         >
     </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="网络连接异常"
        android:textSize="20sp"
        android:textColor="@color/color_gray_text"
        android:id="@+id/error"
        >
    </TextView>

    <Button
        android:id="@+id/back"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="返回"
        android:textColor="@drawable/course_btn_play_color"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/course_btn_play_bg"
        />
    </LinearLayout>
</RelativeLayout>