<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_488"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/w_90"
        android:paddingRight="@dimen/w_90"
        android:paddingTop="@dimen/h_60">
        <ImageView
            android:id="@+id/thumb_image"
            android:layout_width="@dimen/w_348"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/w_60">
            <TextView android:id="@+id/thumb_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/w_50"
                android:textColor="@color/trans_white"
                android:layout_alignParentTop="true"/>
            <TextView android:id="@+id/thumb_buy_yet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_yet"
                android:textSize="@dimen/w_36"
                android:textColor="@color/menu_selector"
                android:layout_marginTop="@dimen/h_14"
                android:layout_toRightOf="@id/thumb_name"
                android:layout_marginLeft="@dimen/w_30"
                android:visibility="gone"/>
            <TextView android:id="@+id/thumb_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/w_30"
                android:textColor="@color/trans_white"
                android:layout_below="@id/thumb_name"
                android:layout_marginTop="@dimen/h_28"
                android:layout_marginBottom="@dimen/h_76"/>
            <TextView android:id="@+id/thumb_update_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/w_30"
                android:textColor="@color/trans_white"
                android:layout_below="@id/thumb_name"
                android:layout_toRightOf="@id/thumb_author"
                android:layout_marginTop="@dimen/h_28"
                android:layout_marginBottom="@dimen/h_76"
                android:layout_marginLeft="@dimen/w_30"/>
            <TextView android:id="@+id/thumb_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/w_30"
                android:textColor="@color/trans_white"
                android:layout_below="@id/thumb_update_time"
                android:layout_above="@+id/middle_menu"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/h_28"
                android:layout_marginBottom="@dimen/h_28"/>
            <RelativeLayout
                android:id="@+id/middle_menu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/h_70"
                android:layout_alignParentBottom="true"
                android:gravity="center">
                <LinearLayout
                    android:id="@+id/button_buy"
                    android:layout_width="@dimen/w_260"
                    android:layout_height="@dimen/h_70"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_marginRight="@dimen/w_20"
                    android:gravity="center"
                    android:clickable="true"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:background="@drawable/selector_video_detail_button"
                    android:layout_alignParentLeft="true"
                    android:visibility="gone">
                    <ImageView
                        android:layout_width="@dimen/w_35"
                        android:layout_height="@dimen/h_35"
                        android:src="@drawable/video_detail_buy"
                        android:layout_marginRight="@dimen/w_30"/>
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/w_30"
                        android:text="@string/buy"/>
                </LinearLayout>>
                <LinearLayout
                    android:id="@+id/button_play"
                    android:layout_width="@dimen/w_260"
                    android:layout_height="@dimen/h_70"
                    android:focusable="true"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:focusableInTouchMode="true"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:layout_marginRight="@dimen/w_20"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/selector_video_detail_button"
                    android:visibility="gone">
                    <ImageView
                        android:layout_width="@dimen/w_35"
                        android:layout_height="@dimen/h_35"
                        android:textSize="@dimen/w_30"
                        android:src="@drawable/video_detail_play"
                        android:layout_marginRight="@dimen/w_30"/>
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/w_30"
                        android:text="@string/play"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/button_collect"
                    android:layout_width="@dimen/w_260"
                    android:layout_height="@dimen/h_70"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:adjustViewBounds="true"
                    android:focusableInTouchMode="true"
                    android:drawablePadding="@dimen/w_20"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/w_280"
                    android:background="@drawable/selector_video_detail_button"
                    android:visibility="gone">
                    <ImageView
                        android:id="@+id/collect_icon"
                        android:layout_width="@dimen/w_35"
                        android:layout_height="@dimen/h_35"
                        android:src="@drawable/collect_not"
                        android:layout_marginRight="@dimen/w_30"/>
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/w_30"
                        android:text="@string/collect"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/source_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/trans_white"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/w_24"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/thumb_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thumb_list"
        android:textColor="@color/trans_white"
        android:textSize="@dimen/w_36"
        android:layout_marginTop="@dimen/h_60"
        android:layout_marginBottom="@dimen/h_36"
        android:layout_below="@id/top_container"
        android:paddingLeft="@dimen/w_90"
        android:paddingRight="@dimen/w_90"
        android:visibility="gone"/>
    <com.open.androidtvwidget.leanback.recycle.RecyclerViewTV
        android:id="@+id/video_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_90"
        android:layout_below="@id/thumb_list_text"
        android:divider="@null"
        android:layout_marginLeft="@dimen/w_90"
        android:layout_marginRight="@dimen/w_90"
        android:listSelector="@android:color/transparent" />
    <com.open.androidtvwidget.leanback.recycle.RecyclerViewTV
        android:id="@+id/video_pages"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_90"
        android:layout_marginTop="@dimen/h_25"
        android:layout_below="@id/video_list"
        android:divider="@null"
        android:layout_marginLeft="@dimen/w_90"
        android:layout_marginRight="@dimen/w_90"
        android:listSelector="@android:color/transparent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/video_pages"
        android:layout_marginTop="@dimen/h_60"
        android:paddingLeft="@dimen/w_90"
        android:paddingRight="@dimen/w_90"
        android:paddingBottom="@dimen/h_90"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/sub_icon"
            android:layout_width="@dimen/w_100"
            android:layout_height="@dimen/h_156"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/w_42"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/trans_white"
                android:textSize="@dimen/w_36"
                android:visibility="visible" />
            <TextView
                android:id="@+id/sub_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/w_30"
                android:layout_marginTop="@dimen/h_30"
                android:lineSpacingExtra="@dimen/h_30"
                android:textColor="@color/trans_white"
                android:ellipsize="end"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buy_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/main_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">
        <ImageView
            android:id="@+id/buy_qrcode"
            android:layout_width="@dimen/w_384"
            android:layout_height="@dimen/h_384"/>
        <RelativeLayout android:layout_width="wrap_content"
            android:layout_height="@dimen/h_384"
            android:layout_marginLeft="@dimen/w_70">
            <TextView
                android:id="@+id/buy_top_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qrcode_scan"
                android:layout_alignParentTop="true"
                android:textColor="@color/white"
                android:textSize="@dimen/w_60"
                />
            <TextView
                android:id="@+id/buy_course_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscribe"
                android:layout_marginTop="@dimen/h_40"
                android:layout_below="@id/buy_top_tip"
                android:textColor="@color/selector"
                android:textSize="@dimen/w_48"
                />
            <TextView
                android:id="@+id/buy_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="199元/年"
                android:layout_alignParentBottom="true"
                android:textColor="#f75700"
                android:textSize="@dimen/w_48"
                />
        </RelativeLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        style="@style/progressbar_style"/>

</RelativeLayout>
